# physical-review-research-article-latex-template

./: .gitignore  .ignore_words.txt  .markdownlint.yaml  .pre-commit-config.yaml  .typos.toml  LICENSE  Makefile  README.md  SECURITY.md  cliff.toml  cspell.json  main.tex  pyproject.toml  requirements.txt  setup_repo.sh
.github/workflows/: CI.yml  ci.yml  schedule-update-actions.yml  scheduled_release.yml
docs/: index.md
figures/: README.md
scripts/: READMD.md
src/template_repository/: __init__.py
